force-app/main/default/objects/Funding_Plan__c/Funding_Plan__c.object-meta.xml
<CustomObject>
    <label>Funding Plan</label>
    <nameField>
        <label>Funding Plan Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Funding Plans</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>