force-app/main/default/objects/Funding_Plan__c/fields/Fund__c.field-meta.xml
<CustomField>
    <fullName>Fund__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Fund</label>
    <referenceTo>Fund__c</referenceTo>
    <relationshipLabel>Funding Plans</relationshipLabel>
    <relationshipName>Funding_Plan_Fund</relationshipName>
    <type>Lookup</type>
</CustomField>