force-app/main/default/objects/Funding_Plan__c/fields/Funding_Program__c.field-meta.xml
<CustomField>
    <fullName>Funding_Program__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Funding Program</label>
    <referenceTo>outfunds__Funding_Program__c</referenceTo>
    <relationshipLabel>Funding Plans</relationshipLabel>
    <relationshipName>Funding_Plan_Funding_Program</relationshipName>
    <type>Lookup</type>
</CustomField>