force-app/main/default/objects/Funding_Plan__c/fields/Parent_Funding_Plan__c.field-meta.xml
<CustomField>
    <fullName>Parent_Funding_Plan__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Funding Plan</label>
    <referenceTo>Funding_Plan__c</referenceTo>
    <relationshipLabel>Funding Plans</relationshipLabel>
    <relationshipName>Funding_Plan</relationshipName>
    <type>Lookup</type>
</CustomField>